--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 alembic==1.7.4
+atomicwrites==1.4.0
+attrs==21.2.0
 cachetools==4.2.4
 certifi==2021.10.8
 charset-normalizer==2.0.7
@@ -12,17 +14,26 @@ google-auth==2.3.0
 google-auth-oauthlib==0.4.6
 greenlet==1.1.2
 idna==3.3
+iniconfig==1.1.1
 itsdangerous==2.0.1
 Jinja2==3.0.2
 Mako==1.1.5
 MarkupSafe==2.0.1
 oauthlib==3.1.1
+packaging==21.0
+pluggy==1.0.0
+py==1.10.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+pyparsing==2.4.7
+pytest==6.2.5
+pytest-flask==1.2.0
+pytest-mock==3.6.1
 python-dotenv==0.19.1
 requests==2.26.0
 requests-oauthlib==1.3.0
 rsa==4.7.2
 SQLAlchemy==1.4.26
+toml==0.10.2
 urllib3==1.26.7
 Werkzeug==2.0.2
